techila/lib/Techila.h

typedef char *LPSTR;
    typedef unsigned int size_t; // -D_GCC_SIZE_T


  /**
   * Set the bundle files copy parameter. When true (1) (default) the files
   * in the data bundle are copied into the working directory (execution
   * directory). When false (0) the files are not copied and can be referenced
   * by using %L(peach_datafiles_X) where X is the index of the data bundle.
   * @param handle the peach handle
   * @param copy
   */
  int techila_peach_setDataCopy(int handle, unsigned char copy);


  /**
   * Set the skip digest bit for job input bundle.
   * @param handle the peach handle
   * @param skipDigest skip (0 or 1)
   */
  int techila_peach_setJobSkipDigest(int handle, unsigned char skipDigest);


  /**
   * Set job input file names. This will clear all previously
   * added / set names.
   * @param handle the peach handle
   * @param paramcount number of file names to add
   * @param ...
   */
  int techila_peach_setJobFileNames(int handle, int paramcount, ...);


  /**
   * Add files to be included in the Job Input Bundle.
   * @param handle the peach handle
   * @param paramcount number of files to add
   * @param ... The names of the files
   */
  int techila_peach_addJobFile(int handle, int paramcount, ...);

  int techila_peach_addJobFile3(int handle, int paramcount, char** params);


  /**
   * Add files from a directory to be included in the Job Input Bundle.
   * @param handle the peach handle
   * @param dir The directory where the file is
   * @param paramcount number of files
   * @param ... The names of the files
   */
  int techila_peach_addJobFileWithDir(int handle, LPSTR dir,  int paramcount, ...);

  int techila_peach_addJobFileWithDir3(int handle, LPSTR dir,  int paramcount, char** params);


  /**
   * Put a value into the Job Input Bundle extra parameters.
   * @param handle the peach handle
   * @param name
   * @param value
   */
  int techila_peach_putJobExtras(int handle, LPSTR name,  LPSTR value);


  /**
   * Set the Parameter bundle skip digest bit.
   * @param handle the peach handle
   * @param skipDigest (0 or 1)
   */
  int techila_peach_setParamSkipDigest(int handle, unsigned char skipDigest);


  /**
   * Add a file into the parameter bundle.
   * @param handle the peach handle
   * @param file The file
   */
  int techila_peach_addParamFile(int handle, LPSTR file);


  /**
   * Add file into parameter bundle from a given directory.
   * @param handle the peach handle
   * @param dir
   * @param file
   */
  int techila_peach_addParamFileWithDir(int handle, LPSTR dir,  LPSTR file);


  /**
   * Add a file into the parameter bundle and specify target name.
   * @param handle the peach handle
   * @param file the file
   * @param targetName target file name in the bundle
   */
  int techila_peach_addParamFileWithTarget(int handle, LPSTR file,  LPSTR targetName);


  /**
   * Put a value into the parameter bundles extra parameters.
   * @param handle the peach handle
   * @param name
   * @param value
   */
  int techila_peach_putParamExtras(int handle, LPSTR name,  LPSTR value);


  /**
   * Add External Resource to Parameter Bundle.
   * @param handle the peach handle
   * @param res
   */
  int techila_peach_addParamExternalResource(int handle, LPSTR res);


  /**
   * Set the parameter bundle copy parameters.
   * @param handle the peach handle
   * @see setDataCopy(unsigned char)
   * @param copy 0 or 1
   */
  int techila_peach_setParamCopy(int handle, unsigned char copy);


  /**
   * Set a project parameter to a given value.
   * @param handle the peach handle
   * @param name parameter name
   * @param value parameter value
   */
  int techila_peach_putProjectParam(int handle, LPSTR name, LPSTR value);


  /**
   * Set streaming mode.
   * @param handle the peach handle
   * @param stream 0 or 1
   */
  int techila_peach_setStream(int handle, unsigned char stream);


  /**
   * Get the handle used for project commands.
   * @param handle the peach handle
   * @return the project handle
   */
  int techila_peach_getProjectHandle(int handle);


  /**
   * Get the project ID of the current project.
   * @param handle the peach handle
   * @return the project id or -1 if not yet set.
   */
  int techila_peach_getProjectId(int handle);


  /**
   * Run the Peach. This will create all bundles if necessary and then
   * create and start the project.
   * @param handle the peach handle
   * @return status code
   */
  int techila_peach_execute(int handle);


  /**
   * Get the result file. This will return 0 in len parameter if no
   * more files are available, i.e. the project is done or failed.
   * @param handle the peach handle
   * @param filename returned buffer for result filename
   * @param len returned length of filename, 0 if no more files available
   * @return status code
   */
  int techila_peach_nextFile(int handle, LPSTR filename, size_t *len);


  /**
   * Mark Peach call as done. Remove and cleanup leftovers.
   * This must be called always.
   * @param handle the peach handle
   */
  int techila_peach_done(int handle);