techila/lib/techila.f90


!   int techila_peach_setDataCopy(int handle, unsigned char copy);
         integer(kind=c_int) function techila_peach_setdatacopy(handle, copy) bind(c, name="techila_peach_setDataCopy")
         use, intrinsic :: iso_c_binding
         integer(kind=c_int), intent(in), value :: handle
         integer(kind=c_int), intent(in), value :: copy
         end function techila_peach_setdatacopy

!   int techila_peach_setJobSkipDigest(int handle, unsigned char skipDigest);
         integer(kind=c_int) function techila_peach_setjobskipdigest(handle, skip) bind(c, name="techila_peach_setJobSkipDigest")
         use, intrinsic :: iso_c_binding
         integer(kind=c_int), intent(in), value :: handle
         integer(kind=c_int), intent(in), value :: skip
         end function techila_peach_setjobskipdigest

!   int techila_peach_setJobFileNames(int handle, int paramcount, ...);
!   int techila_peach_addJobFile(int handle, int paramcount, ...);

!   int techila_peach_addJobFile3(int handle, int paramcount, char** params);
         integer(kind=c_int) function techila_peach_addjobfile3 &
         (handle, paramcount, params) bind(c, name="techila_peach_addJobFile3")
         use, intrinsic :: iso_c_binding
         integer(kind=c_int), intent(in), value :: handle
         integer(kind=c_int), intent(in), value :: paramcount
         type(c_ptr), dimension(paramcount), intent(in) :: params
         end function techila_peach_addjobfile3


!   int techila_peach_addJobFileWithDir(int handle, LPSTR dir,  int paramcount, ...);
!   int techila_peach_addJobFileWithDir3(int handle, LPSTR dir,  int paramcount, char** params);
         integer(kind=c_int) function techila_peach_addjobfilewithdir3 &
         (handle, dir, paramcount, params) bind(c, name="techila_peach_addJobFileWithDir3")
         use, intrinsic :: iso_c_binding
         integer(kind=c_int), intent(in), value :: handle
         character(kind=c_char), intent(in) :: dir(*)
         integer(kind=c_int), intent(in), value :: paramcount
         type(c_ptr), dimension(paramcount), intent(in) :: params
         end function techila_peach_addjobfilewithdir3

!   int techila_peach_putJobExtras(int handle, LPSTR name,  LPSTR value);
         integer(kind=c_int) function techila_peach_putjobextras(handle, name, value) bind(c, name="techila_peach_putJobExtras")
         use, intrinsic :: iso_c_binding
         integer(kind=c_int), intent(in), value :: handle
         character(kind=c_char), intent(in) :: name(*)
         character(kind=c_char), intent(in) :: value(*)
         end function techila_peach_putjobextras

!   int techila_peach_setParamSkipDigest(int handle, unsigned char skipDigest);
         integer(kind=c_int) function techila_peach_setparamskipdigest &
         (handle, skip) bind(c, name="techila_peach_setParamSkipDigest")
         use, intrinsic :: iso_c_binding
         integer(kind=c_int), intent(in), value :: handle
         integer(kind=c_int), intent(in), value :: skip
         end function techila_peach_setparamskipdigest

!   int techila_peach_addParamFile(int handle, LPSTR file);
         integer(kind=c_int) function techila_peach_addparamfile(handle, file) bind(c, name="techila_peach_addParamFile")
         use, intrinsic :: iso_c_binding
         integer(kind=c_int), intent(in), value :: handle
         character(kind=c_char), intent(in) :: file(*)
         end function techila_peach_addparamfile

!   int techila_peach_addParamFileWithDir(int handle, LPSTR dir,  LPSTR file);
         integer(kind=c_int) function techila_peach_addparamfilewithdir &
         (handle, dir, file) bind(c, name="techila_peach_addParamFileWithDir")
         use, intrinsic :: iso_c_binding
         integer(kind=c_int), intent(in), value :: handle
         character(kind=c_char), intent(in) :: dir(*)
         character(kind=c_char), intent(in) :: file(*)
         end function techila_peach_addparamfilewithdir

!   int techila_peach_addParamFileWithTarget(int handle, LPSTR file,  LPSTR targetName);
         integer(kind=c_int) function techila_peach_addparamfilewithtarget &
         (handle, file, target) bind(c, name="techila_peach_addParamFileWithTarget")
         use, intrinsic :: iso_c_binding
         integer(kind=c_int), intent(in), value :: handle
         character(kind=c_char), intent(in) :: file(*)
         character(kind=c_char), intent(in) :: target(*)
         end function techila_peach_addparamfilewithtarget

!   int techila_peach_putParamExtras(int handle, LPSTR name,  LPSTR value);
         integer(kind=c_int) function techila_peach_putparamextras(handle, name, value) bind(c, name="techila_peach_putParamExtras")
         use, intrinsic :: iso_c_binding
         integer(kind=c_int), intent(in), value :: handle
         character(kind=c_char), intent(in) :: name(*)
         character(kind=c_char), intent(in) :: value(*)
         end function techila_peach_putparamextras

!   int techila_peach_addParamExternalResource(int handle, LPSTR res);
         integer(kind=c_int) function techila_peach_addparamexternalresource &
         (handle, res) bind(c, name="techila_peach_addParamExternalResource")
         use, intrinsic :: iso_c_binding
         integer(kind=c_int), intent(in), value :: handle
         character(kind=c_char), intent(in) :: res(*)
         end function techila_peach_addparamexternalresource

!   int techila_peach_setParamCopy(int handle, unsigned char copy);
         integer(kind=c_int) function techila_peach_setparamcopy(handle, copy) bind(c, name="techila_peach_setParamCopy")
         use, intrinsic :: iso_c_binding
         integer(kind=c_int), intent(in), value :: handle
         integer(kind=c_int), intent(in), value :: copy
         end function techila_peach_setparamcopy

!   int techila_peach_putProjectParam(int handle, LPSTR name, LPSTR value);
         integer(kind=c_int) function techila_peach_putprojectparam &
         (handle, name, value) bind(c, name="techila_peach_putProjectParam")
         use, intrinsic :: iso_c_binding
         integer(kind=c_int), intent(in), value :: handle
         character(kind=c_char), intent(in) :: name(*)
         character(kind=c_char), intent(in) :: value(*)
         end function techila_peach_putprojectparam

!   int techila_peach_setStream(int handle, unsigned char stream);
         integer(kind=c_int) function techila_peach_setstream(handle, stream) bind(c, name="techila_peach_setStream")
         use, intrinsic :: iso_c_binding
         integer(kind=c_int), intent(in), value :: handle
         integer(kind=c_int), intent(in), value :: stream
         end function techila_peach_setstream

!   int techila_peach_getProjectHandle(int handle);
         integer(kind=c_int) function techila_peach_getprojecthandle(handle) bind(c, name="techila_peach_getProjectHandle")
         use, intrinsic :: iso_c_binding
         integer(kind=c_int), intent(in), value :: handle
         end function techila_peach_getprojecthandle

!   int techila_peach_getProjectId(int handle);
         integer(kind=c_int) function techila_peach_getprojectid(handle) bind(c, name="techila_peach_getProjectId")
         use, intrinsic :: iso_c_binding
         integer(kind=c_int), intent(in), value :: handle
         end function techila_peach_getprojectid

!   int techila_peach_execute(int handle);
         integer(kind=c_int) function techila_peach_execute(handle) bind(c)
         use, intrinsic :: iso_c_binding
         integer(kind=c_int), intent(in), value :: handle
         end function techila_peach_execute

!   int techila_peach_nextFile(int handle, LPSTR filename, size_t *len);
         integer(kind=c_int) function techila_peach_nextfile(handle, filename, len) bind(c, name="techila_peach_nextFile")
         use, intrinsic :: iso_c_binding
         integer(kind=c_int), intent(in), value :: handle
         character(kind=c_char), intent(out) :: filename(*)
         integer(kind=c_int), intent(out) :: len
         end function techila_peach_nextfile

!   int techila_peach_done(int handle);
         integer(kind=c_int) function techila_peach_done(handle) bind(c)
         use, intrinsic :: iso_c_binding
         integer(kind=c_int), intent(in), value :: handle
         end function techila_peach_done

      end interface
      end module techila
